--- a/poc.ipynb
+++ b/poc.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Define Enum for LLMProvider Options\n",
     "from enum import Enum\n",
-    "class LLMProvider(Enum):\n",
+    "class LLMProviderOptions(Enum):\n",
     "    OPENAI = \"openai\"\n",
     "    GEMINI = \"gemini\"\n",
     "    ANTHROPIC = \"anthropic\""
@@ -87,10 +87,7 @@
     "    def __init__(self, config: BaseAgentConfig, system_message: str):\n",
     "        self.config = config\n",
     "        self.system_message = system_message\n",
-    "        \n",
-    "        self.history: List[Message] = [\n",
-    "            Message(role=\"system\", content=system_message)\n",
-    "        ]\n",
+    "        self.history: List[Message] = []\n",
     "\n",
     "    # -------------------------\n",
     "    # History Management\n",
@@ -113,12 +110,32 @@
     "        \"\"\"Replace history with a summary.\"\"\"\n",
     "        summary = summarizer.generate(\n",
     "            \"Summarize the following conversation:\\n\"\n",
-    "            + \"\\n\".join(m.content for m in self.history)\n",
+    "            + \"\\n\\n\".join((m.role + \": \" + m.content) for m in self.history)\n",
     "        )\n",
     "        self.history = [\n",
-    "            Message(role=\"system\", content=self.system_message),\n",
     "            Message(role=\"assistant\", content=summary)\n",
     "        ]\n",
+    "    \n",
+    "    # -------------------------\n",
+    "    # Messages Management\n",
+    "    # -------------------------\n",
+    "    \n",
+    "    # allow changing system message at runtime (still not persisted)\n",
+    "    def set_system_message(self, msg: Optional[str]):\n",
+    "        self._system_message = msg\n",
+    "\n",
+    "    # helpers to build provider payload (default behavior)\n",
+    "    def _build_messages_payload(self) -> List[Dict[str, str]]:\n",
+    "        \"\"\"\n",
+    "        Default neutral representation: system injected as first message if present.\n",
+    "        Child providers may override to fit their API.\n",
+    "        \"\"\"\n",
+    "        msgs = []\n",
+    "        if self._system_message:\n",
+    "            msgs.append({\"role\": \"system\", \"content\": self._system_message})\n",
+    "        for m in self.history:\n",
+    "            msgs.append({\"role\": m.role, \"content\": m.content})\n",
+    "        return msgs\n",
     "\n",
     "    # -------------------------\n",
     "    # Generation APIs\n",
@@ -141,10 +158,11 @@
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
-    "    def generate_tool_calls(\n",
+    "    def generate_with_tools(\n",
     "        self,\n",
     "        prompt: str,\n",
     "        tools: List[BaseModel],\n",
+    "        enforce_tool_use: bool = False,\n",
     "        stream: bool = False,\n",
     "        **kwargs\n",
     "    ):\n",
@@ -156,8 +174,112 @@
     "    @classmethod\n",
     "    def supported_config(cls) -> Dict[str, Any]:\n",
     "        \"\"\"Expose valid config fields to user/dev.\"\"\"\n",
-    "        return cls.config_schema.model_json_schema()\n"
+    "        return cls.config_schema.model_json_schema()\n",
+    "    \n",
+    "    @classmethod\n",
+    "    @abstractmethod\n",
+    "    def capability_metadata(cls) -> Dict[str, Any]:\n",
+    "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70713d37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class OpenAIProvider(LLMProvider):\n",
+    "    config_schema = OpenAIConfig\n",
+    "\n",
+    "    def generate(self, prompt: str, **kwargs) -> str:\n",
+    "        self.add_user_message(prompt)\n",
+    "        # OpenAI SDK call here\n",
+    "        response = \"openai-response\"\n",
+    "        self.add_assistant_message(response)\n",
+    "        return response\n",
+    "\n",
+    "    def generate_stream(self, prompt: str, **kwargs):\n",
+    "        yield \"openai-stream\"\n",
+    "\n",
+    "    def generate_structured(self, prompt, response_schema, **kwargs):\n",
+    "        return {}\n",
+    "\n",
+    "    def generate_tool_calls(self, prompt, tools, stream=False, **kwargs):\n",
+    "        return {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fdf11e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GeminiProvider(LLMProvider):\n",
+    "    config_schema = GeminiConfig\n",
+    "\n",
+    "    def generate(self, prompt: str, **kwargs) -> str:\n",
+    "        self.add_user_message(prompt)\n",
+    "        response = \"gemini-response\"\n",
+    "        self.add_assistant_message(response)\n",
+    "        return response\n",
+    "\n",
+    "    def generate_stream(self, prompt: str, **kwargs):\n",
+    "        yield \"gemini-stream\"\n",
+    "\n",
+    "    def generate_structured(self, prompt, response_schema, **kwargs):\n",
+    "        return {}\n",
+    "\n",
+    "    def generate_tool_calls(self, prompt, tools, stream=False, **kwargs):\n",
+    "        return {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97ada796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Type, Union\n",
+    "\n",
+    "PROVIDER_REGISTRY: Dict[LLMProviderOptions, Type[LLMProvider]] = {\n",
+    "    LLMProviderOptions.OPENAI: OpenAIProvider,\n",
+    "    LLMProviderOptions.GEMINI: GeminiProvider,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f76d9cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_agent(\n",
+    "    provider: LLMProviderOptions,\n",
+    "    config: Union[OpenAIConfig, GeminiConfig],\n",
+    "    system_message: str,\n",
+    ") -> LLMProvider:\n",
+    "    provider_cls = PROVIDER_REGISTRY[provider]\n",
+    "\n",
+    "    # Runtime safety: ensure correct config type\n",
+    "    if not isinstance(config, provider_cls.config_schema):\n",
+    "        raise TypeError(\n",
+    "            f\"{provider.value} expects {provider_cls.config_schema.__name__}\"\n",
+    "        )\n",
+    "\n",
+    "    return provider_cls(config=config, system_message=system_message)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53688c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
